Selection API: setBaseAndExtent() and selectAllChildren() should create new Range based on the specified nodes.

* ConsoleViewport._textOffsetInNode():
  It supported only Text node |container|. This CL adds Element support.

This CL removes the following tests because they are covered
by external/wpt/selection/:
 - editing/selection/getRangeAt.html
 - editing/selection/select_all/select_all_html.html
 - editing/selection/set_base_and_extent/set_base_and_extent_html.html

This CL fixes 2056 sub-tests in external/wpt/selection/.

BUG=692400

Review-Url: https://codereview.chromium.org/2695193002
Cr-Commit-Position: refs/heads/master@{#450876}

Former-commit-id: de65c2b24fc750fd8aee253b2be3600bf1a6555b